syntax = "proto3";

package stock;

option go_package = "github.com/akhdanrgya/telu-hub/backend/internal/grpc_service;grpc_service";

// Service untuk streaming update stok
service StockService {
  // Client kirim request buat langganan update
  rpc SubscribeStockUpdates(SubscribeRequest) returns (stream StockUpdateResponse);
  // Server terima update dari backend
  rpc BroadcastStockUpdate(StockUpdateResponse) returns (EmptyResponse);
}

message SubscribeRequest {}

message StockUpdateResponse {
  uint32 product_id = 1;
  int32 new_stock = 2;
}

message EmptyResponse {}
