syntax = "proto3";

package stock;

option go_package = "github.com/akhdanrgya/telu-hub/backend/internal/grpc_service;grpc_service";

service StockService {
  rpc TrackStock(TrackStockRequest) returns (StockUpdateResponse);
}

message TrackStockRequest {
  uint32 product_id = 1;
}

message StockUpdateResponse {
  uint32 product_id = 1;
  int32 new_stock = 2;
}
